[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disfork"
version = "0.1.0"
description = "Discord bot helpers for caching bad IDs and keeping noisy actions under control."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "koski-discord" }
]
keywords = ["discord", "bot", "discord.py", "ratelimit", "cache"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "discord.py>=2.4,<3"
]

[project.urls]
Homepage = "https://github.com/koski-discord/disfork"
Repository = "https://github.com/koski-discord/disfork"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
